fixed contrast ratio for buttons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
   --color-secondary: #1C2B2D;
   --color-third: #000000;
   --color-fourth: #D99968;
-  --color-fifth: #B57C50;
+  --color-fifth: #A0522D;
 }
 
 @theme inline {
